--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,13 +12,18 @@
 </body>
 </html>
 <!--
-wir brauchen noch Routing und Berechnung der Projektdauer
+Fokus Czichi:
+- Graphik nachrangig
+- minimaler Prototyp
+- Errechnung des Endtermins / Dauer <- in seinem Fokus
+
+  wir brauchen noch Routing und Berechnung der Projektdauer
 
 Idee:
 3 Seiten
-  - Start/ home mit Projektliste (Suche ja/nein?)
+  - Start/ home mit Projektliste (Suche - nein)
   - Projektdetails
-  - Work Item Details
+  - Work Item Details oder als Dialog+Reload?
 
 Buttons
 Home -> Details/ Ansehen -> (gespeicherte) Projektdetails
@@ -28,4 +33,10 @@ Projektdetails -> Details / Ansehen -> (gespeicherte) Work Item Details
 Projektdetails -> Speichern -> Home & Eintrag in DB im Hintergrund speichern
 Work Item Details -> Speichern -> Projektdetails & Eintrag in DB im Hintergrund speichern
 (brauchen wir noch ein Abbrechen-Button bei Work Item Details?)
+
+
+Vorlage war https://www.mongodb.com/languages/mean-stack-tutorial
+Berechnung Ende -> Start + Duration
+Berechnung beim Laden oder speichern? mindestens alle Packagedauer zusammenrechnen?
+AddWorkDays? (kann man direkt mit Werktagen/ Arbeitstagen rechnen?) 
 -->
